2006-04-08  Stefan Kost  <ensonic@users.sf.net>

	* ext/annodex/gstcmmldec.h:
	* ext/annodex/gstcmmlenc.h:
	* ext/annodex/gstcmmltag.h:
	* ext/cairo/gsttextoverlay.h:
	* ext/ladspa/gstsignalprocessor.h:
	* gst/matroska/ebml-read.h:
	* gst/matroska/ebml-write.h:
	* sys/osxaudio/gstosxaudioelement.h:
	Fix broken GObject macros

2006-04-08  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/flac/gstflacdec.c: (gst_flac_dec_handle_seek_event):
	  Don't try to seek beyond the end of the file (would
	  occasionally display error dialogs in totem when seeking
	  to the end) (#335869). Will still throw an error though
	  if the file is truncated and the total_samples value in
	  the stream header is wrong.

2006-04-07  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/flac/gstflacdec.c: (gst_flac_calculate_crc8),
	(gst_flac_dec_scan_got_frame), (gst_flac_dec_scan_for_last_block),
	(gst_flac_dec_metadata_callback):
	* ext/flac/gstflacdec.h:
	  If the stream header doesn't contain the total number of samples,
	  search for the last flac frame at the end of the file and calculate
	  the total duration from that frame's offset (fixes #337609).

2006-04-07  Edward Hervey  <edward@fluendo.com>

	* gst/avi/gstavidemux.c: (gst_avi_demux_parse_stream):
	Don't unref the GstPadTemplate returned by
	gst_element_class_get_pad_template().

2006-04-06  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Brian Cameron  <brian dot cameron at sun dot com>

	* sys/sunaudio/gstsunaudiosink.c: (gst_sunaudiosink_init),
	(gst_sunaudiosink_prepare), (gst_sunaudiosink_write):
	* sys/sunaudio/gstsunaudiosink.h:
	  Use spec->segsize and spec->segtotal in the prepare function
	  to initialise the ring buffer instead of using the buffer-time
	  property (#337421).

2006-04-06  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Bump core requirements to CVS for gst_pad_query_peer_duration()
	  which is used by speexdec.
