@@ -35,10 +35,12 @@ extern "C" {
 #define GST_MIKMOD(obj) \
   (G_TYPE_CHECK_INSTANCE_CAST((obj),GST_TYPE_MIKMOD,GstMikMod))
 #define GST_MIKMOD_CLASS(klass) \
-  (G_TYPE_CHECK_CLASS_CAST((klass),GST_TYPE_ULAW,GstMikMod))
+  (G_TYPE_CHECK_CLASS_CAST((klass),GST_TYPE_MIKMOD,GstMikModClass))
+#define GST_MIKMOD_GET_CLASS(obj) \
+  (G_TYPE_INSTANCE_GET_CLASS((obj),GST_TYPE_MIKMOD,GstMikModClass))
 #define GST_IS_MIKMOD(obj) \
   (G_TYPE_CHECK_INSTANCE_TYPE((obj),GST_TYPE_MIKMOD))
-#define GST_IS_MIKMOD_CLASS(obj) \
+#define GST_IS_MIKMOD_CLASS(klass) \
   (G_TYPE_CHECK_CLASS_TYPE((klass),GST_TYPE_MIKMOD))
   
 struct _GstMikMod {
